--- a/src/css/1-gallery.css
+++ b/src/css/1-gallery.css
@@ -19,14 +19,17 @@ img {
 }
 
 .gallery {
-  padding: 20px 0;
   display: flex;
   flex-wrap: wrap;
-  gap: 20px 24px;
+  gap: 24px;
+  margin: 0 156px;
+  padding: 0;
+  list-style: none;
 }
 
 .gallery-item {
-  flex-basis: calc((100% - 48px) / 3);
+  height: auto;
+  width: calc((100% - 2 * 24px) / 3);
   transition: transform 250ms ease-in-out;
 }
 
@@ -35,5 +38,7 @@ img {
 }
 
 .gallery-image {
-  height: 320px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
